syntax = "proto3";

package test_app;

import "proto/hello_world.proto";

service HelloWorld {
  rpc Hello(HelloReq) returns (HelloResp);
}
